// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing component rednering propperly renders MissionsList component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-aos-delay="0"
    data-aos-duration="2000"
    data-aos-easing="ease"
  >
    <div>
      <div
        class="missions-container"
      >
        <h2
          class="missions-title aos-init aos-animate"
          data-aos="fade-right"
        >
          MISSIONS
        </h2>
        <div
          class="missions-list"
        >
          ;
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="missions-container"
    >
      <h2
        class="missions-title aos-init aos-animate"
        data-aos="fade-right"
      >
        MISSIONS
      </h2>
      <div
        class="missions-list"
      >
        ;
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing component rednering propperly renders RocketList component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-aos-delay="0"
    data-aos-duration="1000"
    data-aos-easing="ease"
  >
    <div>
      <div
        class="rocket-list-container"
        data-testid="rocket-list-test"
      >
        <h2
          class="list-title aos-init aos-animate"
          data-aos="fade-right"
        >
          ROCKETS
        </h2>
        <ul
          class="rocket-list"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rocket-list-container"
      data-testid="rocket-list-test"
    >
      <h2
        class="list-title aos-init aos-animate"
        data-aos="fade-right"
      >
        ROCKETS
      </h2>
      <ul
        class="rocket-list"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing component rednering propperly renders Rockets component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-aos-delay="0"
    data-aos-duration="1000"
    data-aos-easing="ease"
  >
    <div>
      <div
        class="rocket-list-container"
        data-testid="rocket-list-test"
      >
        <h2
          class="list-title aos-init aos-animate"
          data-aos="fade-right"
        >
          ROCKETS
        </h2>
        <ul
          class="rocket-list"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rocket-list-container"
      data-testid="rocket-list-test"
    >
      <h2
        class="list-title aos-init aos-animate"
        data-aos="fade-right"
      >
        ROCKETS
      </h2>
      <ul
        class="rocket-list"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing component rednering propperly renders navbar component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-aos-delay="0"
    data-aos-duration="2000"
    data-aos-easing="ease"
  >
    <div>
      <nav
        class="navbar"
      >
        <div
          class="logo-and-text"
        >
          <img
            alt="planet logo"
            src="planetLogo.png"
          />
          <p>
            <a
              aria-current="page"
              class="logo-text active"
              href="/"
            >
              Space Travelers' Hub
            </a>
          </p>
        </div>
        <ul
          class="links-list"
        >
          <li>
            <a
              aria-current="page"
              class="link active"
              href="/"
            >
              ROCKETS
            </a>
          </li>
          <li>
            <a
              class="link"
              href="/missions"
            >
              MISSIONS
            </a>
          </li>
          <li>
            <a
              class="link"
              href="/profile"
              id="my-profile"
            >
              MY PROFILE
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="navbar"
    >
      <div
        class="logo-and-text"
      >
        <img
          alt="planet logo"
          src="planetLogo.png"
        />
        <p>
          <a
            aria-current="page"
            class="logo-text active"
            href="/"
          >
            Space Travelers' Hub
          </a>
        </p>
      </div>
      <ul
        class="links-list"
      >
        <li>
          <a
            aria-current="page"
            class="link active"
            href="/"
          >
            ROCKETS
          </a>
        </li>
        <li>
          <a
            class="link"
            href="/missions"
          >
            MISSIONS
          </a>
        </li>
        <li>
          <a
            class="link"
            href="/profile"
            id="my-profile"
          >
            MY PROFILE
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
